--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [config]
-domain=https://cqube.tibilprojects.com/
-username=admin
-password=Tibil@123
+domain=
+username=
+password=
 
 basedirpath=
 host=localhost
